add_library(
  core
  codec.cpp
  codec.hpp
  common.cpp
  common.hpp
  event_queue.hpp
  file.cpp
  file.hpp
  http.cpp
  http.hpp
  network.hpp
  protocol.cpp
  protocol.hpp
  router.hpp
  server.cpp
  server.hpp
  tcp.cpp
  tcp.hpp
  video.cpp
  video.hpp
  websocket.cpp
  websocket.hpp
)

target_link_libraries(
  core
  PRIVATE
  spdlog
  ${AVCODEC_LIBRARY}
  ${AVUTIL_LIBRARY}
  ${AVFILTER_LIBRARY}
  ${AVFORMAT_LIBRARY}
)

target_include_directories(
  core
  PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}
)
